<resources>
    <string name="app_name">gasto_de_viagem</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="kms_por_litro">KMS por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total será de:</string>
    <string name="valor">R$ 0</string>
    <string name="calcular">Calcular</string>
</resources>